# Aretes

./: README.md  aretes.cabal  hie.yaml  stack.yaml
src/: Main.hs  Types.hs
src/Templates/: Index.hs  Mixins.hs  Post.hs
